[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ShopItem.gd" type="Script" id=2]
[ext_resource path="res://TextureButton.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sound/Coins1.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="ShopItem" type="ColorRect"]
margin_left = 10.0
margin_top = 226.0
margin_right = 1010.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.878431, 0.580392, 0.313726, 1 )
script = ExtResource( 2 )

[node name="ItemTextureRect" type="TextureRect" parent="."]
margin_left = 26.0
margin_top = 32.0
margin_right = 90.0
margin_bottom = 96.0

[node name="Name" type="Label" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 203.0
margin_bottom = 85.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "
"

[node name="Price" type="Label" parent="."]
margin_left = 300.0
margin_top = 50.0
margin_right = 309.0
margin_bottom = 85.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "
"

[node name="BuyButton" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 50.0
margin_right = 360.0
margin_bottom = 60.0
rect_scale = Vector2( 1.2, 1.2 )
script = ExtResource( 3 )

[node name="BuyAudio" type="AudioStreamPlayer" parent="BuyButton"]
stream = ExtResource( 4 )

[connection signal="buy_item" from="BuyButton" to="." method="_on_TextureButton_buy_item"]
